--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,17 @@
 
 buildscript {
     ext.kotlin_version = '1.3.50'
+    // latest stable
+    ext.koin_version = '2.0.1'
     repositories {
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.2.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
